--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "utils": "^0.2.2"
+    "utils": "^0.2.2",
+    "uuid": "^8.3.2"
   }
 }
