--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "18.11.0"
   },
   "scripts": {
-    "start": "npm start",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
